auto-test/tests/chapter_18/invalid_parse/var_decl_bad_tag_2.c
struct s {
    int y;
};

int main(void) {
    
    struct(s) var;

    return 0;
}